--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -6,7 +6,7 @@ Version: 2.3.2
 License: MIT
 Vendor: elasticsearch.org
 Cartridge-Version: 1.1.1
-Cartridge-Vendor: ajagnanan
+Cartridge-Vendor: wwwyaron
 
 Categories:
   - web_framework
